--- a/src/classes/SO2TP_SettingsController.cls
+++ b/src/classes/SO2TP_SettingsController.cls
@@ -6,8 +6,14 @@ public class SO2TP_SettingsController{
         so2tpSettings = SO2TP_Settings__c.getOrgDefaults();
     }
     
-    public PageReference Save(){
+    public PageReference save(){
         update so2tpSettings;
         return null;
     }
+    
+    public PageReference startAggregation(){
+        SO2TP_QuestionProcessor processor = new SO2TP_QuestionProcessor();
+        processor.processNewQuestions();
+        return null;
+    }    
 }
