added previous execution statistics calculation, added filtering by last 24 hours, fixed exceptions related to settings update, updated readme and screenshot

--- a/src/classes/SO2TP_Constants.cls
+++ b/src/classes/SO2TP_Constants.cls
@@ -1,3 +1,5 @@
 public class SO2TP_Constants{
-    public static final String SO_URL = 'https://api.stackexchange.com/2.2/questions?pagesize=99&order=desc&sort=creation&site=stackoverflow';
+
+    public static final String SO_URL = 'https://api.stackexchange.com/2.2/questions?pagesize=99&order=desc&sort=creation&site=stackoverflow&fromdate='+
+            ((Datetime.now().getTime()/1000)-86400);
 }
