--- a/src/classes/SO2TP_SettingsController.cls
+++ b/src/classes/SO2TP_SettingsController.cls
@@ -4,10 +4,13 @@ public class SO2TP_SettingsController{
     
     public SO2TP_SettingsController(){
         so2tpSettings = SO2TP_Settings__c.getOrgDefaults();
+        if(so2tpSettings==null){
+            so2tpSettings = new SO2TP_Settings__c();
+        }
     }
     
     public PageReference save(){
-        update so2tpSettings;
+        upsert so2tpSettings;
         return null;
     }
     
