add implementation with "Social for Chatter"

--- a/src/classes/SO2TP_QuestionProcessor.cls
+++ b/src/classes/SO2TP_QuestionProcessor.cls
@@ -1,67 +1,49 @@
-public class SO2TP_QuestionProcessor{
-    private SO2TP_Settings__c settings;
-    private String soUrl;
-    private List<String> tags;
-
-    public SO2TP_QuestionProcessor(){
-        settings = SO2TP_Settings__c.getOrgDefaults();
-        soUrl = SO2TP_Constants.SO_URL;
-        tags = settings.SO2TP_questionTags__c.split(',');
-    }
+public class SO2TP_QuestionProcessor implements Queueable, Database.AllowsCallouts {   
+    private SO2TP_Settings__c settings = SO2TP_Settings__c.getOrgDefaults();
     
-    public void processNewQuestions(){
-        clearPreviousStatistics();
+    public void execute(QueueableContext context){
+        String soUrl = SO2TP_Constants.SO_URL;
+        List<String> tags = settings.SO2TP_questionTags__c.split(',');
+        List<FeedItem> feedItems = new List<FeedItem>();
+        
         if(!tags.isEmpty()){
             for(String tag: tags){
                 String taggedUrl = soUrl + (!String.isBlank(tag)? '&tagged='+tag : '');
-                agregateNewQuestions(taggedUrl);   
+                feedItems.addAll(processQuestions(taggedUrl));
             }
         }else{
-            agregateNewQuestions(soUrl);
+            feedItems = processQuestions(soUrl);
         }
+        if(!feedItems.isEmpty()){
+            System.enqueueJob(new SO2TP_TweetProcessor(feedItems));
+        }                       
     }
     
-    private void clearPreviousStatistics(){
-        settings.SO2TP_tweetsAmount__c=0;
-        settings.SO2TP_runningRequests__c='';
-        update settings;
-    }
-        
-    @future(callout=true)
-    public static void agregateNewQuestions(String finalSoUrl){       
+    private List<FeedItem> processQuestions(String url){
+        List<FeedItem> feeds = new List<FeedItem>();           
+                
         Http http = new Http(); 
         HttpRequest req = new HttpRequest();
-        req.setEndpoint(finalSoUrl);
+        req.setEndpoint(url);
         req.setMethod('GET');
-        
-        System.debug('>>> SO request URL = '+finalSoUrl);
-        SO2TP_Settings__c stngs = SO2TP_Settings__c.getOrgDefaults();
-        stngs.SO2TP_runningRequests__c = String.isBlank(stngs.SO2TP_runningRequests__c)?
-                stngs.SO2TP_runningRequests__c = finalSoUrl : stngs.SO2TP_runningRequests__c +'\n '+finalSoUrl;
-        //update stngs;
-          
         HttpResponse res = http.send(req);
         Map<String, Object> m = (Map<String, Object>) JSON.deserializeUntyped(res.getBody());
-        List<Object> questions = (List<Object>) m.get('items');                
+        List<Object> questions = (List<Object>) m.get('items');
+                
         for (Object q : questions){
             Map<String, Object> p = (Map<String, Object>)q;
-            if(stngs.SO2TP_tweetOnlyUnanswered__c
+            if(settings.SO2TP_tweetOnlyUnanswered__c
                     && (Integer)p.get('answer_count')==0){
                 String link = (String)p.get('link');
                 String title = (String)p.get('title');
-                String message = (title.length()<=100 ? title : title.left(100)+'...')+' '+link;
-
-                SO2TP_TwitterUtil tu = new SO2TP_TwitterUtil(
-                        SO2TP_Settings__c.getOrgDefaults().SO2TP_twitterApplicationApiKey__c, 
-                        SO2TP_Settings__c.getOrgDefaults().SO2TP_twitterApplicationApiSecret__c, 
-                        SO2TP_Settings__c.getOrgDefaults().SO2TP_twitterAccessToken__c, 
-                        SO2TP_Settings__c.getOrgDefaults().SO2TP_twitterAccessTokenSecret__c);
-                boolean isTweetCreated = tu.sendTweet(message, null);
-                if(isTweetCreated){
-                    stngs.SO2TP_tweetsAmount__c++;
-                }               
+                String message = (title.length()<=100 ? title : title.left(100)+'...')+' '+link+' #twitter';
+                        
+                FeedItem post = new FeedItem();
+                post.parentId = UserInfo.getUserId();
+                post.Body = message; 
+                feeds.add(post);
             }
         }
-        update stngs;       
+        return feeds;             
     }
 }
